- Changed: Lift choppper (chopper 1) will now respawn after 10 minutes (if empty), like the wreck lift chopper
- Changed: Remove user markers at a main target after target is seized (cleanup)
- Changed: Parajump does no longer spawn a client side chopper for ejecting (caused issues without createVehicleLocal)
- Changed: Placing explosives near ammo boxes is no longer possible (prevents idiots from placing thousands of mines around respawn points)
- Changed: Dropped ammo boxes (e.g. from MHQ) can now only be accessed about 1000 times from players; they then get deleted
- Changed: Moved player killed check to server entitykilled instead of sending a remoteExec from the killed client to the server everytime
- Changed: Enabled AMRAAM type missiles for pylon loadout again 
- Fixed: Saving the player gear layout when closing arsenal to the server was missing side parameter which broke it
- Fixed: Sometimes dropped box markers did not get deleted
- Fixed: Removed binoculars from enemy AI group leaders so that they don't run around with a bino in their hands constantly
- Fixed: No chat message when an ammobox near a vehicle was loaded
- Fixed: Moved revive help message a little bit to the left to avoid cut off text
- Fixed: AI inf barracks respawn handling did sometimes not select another barrack when one was destroyed
- Fixed: Pressing the M key in the spectating dialog to open the (respawn) map did not close the player panel
- Fixed: Loading gear setup in Virtual Arsenal was still possible in ranked mode with key combo CTRL-O
- Fixed: Added missing shotboundingmine simulation to check for explosives laid at base
- Fixed: Enemy AI vehicles should no longer explode during creation
- Fixed: Camp dialog progress resource did not show again if a player was killed inside the camp area
- Fixed: Carrier service trigger was created on sea level and not on the carrier flight deck