@@ -13,6 +13,7 @@
 - Changed: Dropped ammo boxes (e.g. from MHQ) can now only be accessed about 1000 times from players; they then get deleted
 - Changed: Moved player killed check to server entitykilled instead of sending a remoteExec from the killed client to the server everytime
 - Changed: Enabled AMRAAM type missiles for pylon loadout again
+- Changed: Squad leader gets one point when another group member spawns at his/her position (only available in ranked mode or a database is running)
 - Fixed: Saving the player gear layout when closing arsenal to the server was missing side parameter which broke it
 - Fixed: Sometimes dropped box markers did not get deleted
 - Fixed: Removed binoculars from enemy AI group leaders so that they don't run around with a bino in their hands constantly
